--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
         <form method="GET" action="results.html">
             <div>
                 <label for="firstname">Your First Name</label>
-                <input type="text" id="firstname" name="firstname">
+                <input type="text" id="firstname" minlength="2" maxlength="35" name="firstname">
                 <label for="lastname">Your Last Name</label>
-                <input type="text" id="lastname" name="lastname">
+                <input type="text" id="lastname" name="lastname" minlength="2" maxlength="35">
+                <label for="age">Your Age</label>
+                <input type="number" id="age" name="age" min="21" max="120">
+            <h5>age 21 or older to enter the contest</h5>
             </div>
             <fieldset>
                 <legend>Your Contact Info</legend>
@@ -28,7 +31,7 @@
                 <div>
                     <label for="address">Your Street Address</label>
                     <input type="text" id="address" name="address">
-                </div>
+                </div>  
                 <div>
                     <label for="city">Your City</label>
                     <input type="text" id="city" name="city">
@@ -86,7 +89,7 @@
                         <option value="WY">Wyoming</option>
                     </datalist>
                     <label for="zip">Your Zipcode</label>
-                    <input type="text" id="zip" name="zip">
+                    <input type="text" id="zip" name="zip" pattern="[0-9]{5}" title="5-Digit US ZIP Code">
                 </div>
             </fieldset>
 
