--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
         <h2>Vacation Contest Sign-Up Form</h2>
         <form method="GET" action="results.html">
             <div>
-                <label for="firstname">Your First Name</label>
-                <input type="text" id="firstname" minlength="2" maxlength="35" name="firstname">
-                <label for="lastname">Your Last Name</label>
-                <input type="text" id="lastname" name="lastname" minlength="2" maxlength="35">
+                <label for="firstname">Your First Name</label> <span class="required-field">*</span>
+
+                <input type="text" id="firstname" minlength="2" maxlength="35"   name="firstname" required>
+                <label for="lastname">Your Last Name</label> <span class="required-field">*</span>
+
+                <input type="text" id="lastname"  minlength="2" maxlength="35" name="lastname" required>
                 <label for="age">Your Age</label>
                 <input type="number" id="age" name="age" min="21" max="120">
             <h5>age 21 or older to enter the contest</h5>
@@ -25,8 +27,9 @@
             <fieldset>
                 <legend>Your Contact Info</legend>
                 <div>
-                    <label for="email">Your Email</label>
-                    <input type="email" id="email" name="email">
+                    <label for="email">Your Email</label> <span class="required-field">*</span>
+
+                    <input type="email" id="email" name="email" required>
                 </div>
                 <div>
                     <label for="address">Your Street Address</label>
